# ray-tracer

./: CMakeLists.txt  CMakePresets.json  camera.cpp  common.hpp  hit_info.cpp  main  main.cpp  material.cpp  obj.cpp  ppm.hpp  ray.cpp  shader.cpp  shape.cpp
shaders/: fullscreen.vert  raytrace.frag  shader.frag
